@@ -1,0 +1,10 @@
+<script type="text/javascript">
+    $(function(){
+        if (typeof MC_install == "undefined")
+        {
+            console.log("MC_install is not defined");
+        }else{
+            MC_install.runClear();
+        }
+    });
+</script>
