@@ -28,6 +28,9 @@
             <li class="previous">
                 <a href="/install/database.php">&larr; Précédent</a>
             </li>
+            <li class="next">
+                <a href="/install/clear.php">Suivant &rarr;</a>
+            </li>
         </ul>
     </div>
     {include file="section/footer.phtml"}
